@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.1-0.020
-Date: 2023-04-08
+Version: 3.1-0.021
+Date: 2023-04-09
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
