@@ -208,7 +208,9 @@ export("g3Cengine")
 export("g3engine")
 export("G3est")
 export("Gcross")
+export("Gcross.inhom")
 export("Gdot")
+export("Gdot.inhom")
 export("Gest")
 export("getSumFun")
 export("Gfox")
